--- a/make/crowd.html
+++ b/make/crowd.html
@@ -309,10 +309,10 @@
         <header>
             <div class="header-content">
                 <div class="header-content-inner">
-                    <h1>Turn your animations into real-life figurines</h1>
+                    <h1>Aakist for Crowdfunding</h1>
                     <hr>
-                    <p>Hold your 3D mesh in your hands with 3D printing</p>
-                    <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">Join</a>
+                    <p>Custom manufacturing through 3D printing, perfect for Kickstarters and product launches.</p>
+                    <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">Get A quote</a>
                 </div>
             </div>
         </header>
@@ -321,17 +321,82 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Help All Along the Way</h4>
-                        <p class="text-faded">Global Customer Service Team and in-depth tutorials to answer your questions</p>
+                        <h4 class="section-heading">Finished Goods</h4>
+                        <p class="text-faded">High quality, unique designs and limitless customization for your business</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Full Color Prints</h4>
-                        <p class="text-faded">Print single models or entire renders using the best printers available</p>
+                        <h4 class="section-heading">Rapid Prototyping</h4>
+                        <p class="text-faded">Build a proof of concept for yourself and your backers quickly, then iterate</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Affordable and Fast</h4>
-                        <p class="text-faded">Save on 3D prints and ship them anywhere in the world</p>
+                        <h4 class="section-heading">Backer Rewards</h4>
+                        <p class="text-faded">Need a cool and unique reward or merchandise? Get it 3D printed!</p>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="portfolio" class="portfolio bg-darkest-gray">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 col-lg-offset-1 text-center">
+                        <h2>Why Aakist?</h2>
+                        <hr class="small">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>Highest quality 3D printing materials in the industry.</h3>
+                                        <p class="text-muted">Over 50 materials, from affordable plastic to stunning 14K gold give you the largest selection to prototype or print your final product. </p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>Scalable production capacity.</h3>
+                                        <p class="text-muted">Supply always meets demand, so you're prepared when your project takes off, even if it's more successful than you imagined!</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>Worldwide fulfillment through our API.</h3>
+                                        <p class="text-muted">Place orders through our platform and we take care of the rest, all the way to customer support.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>Design help from the best 3D modelers in the world.</h3>
+                                        <p class="text-muted">Hire a talented designer from our community, who you can work with directly to create your 3D models.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>No minimum, no waste.</h3>
+                                        <p class="text-muted">There's no upfront financial investment to start creating, and a minimum run of one means less waste as you iterate your design.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="portfolio-item">
+                                    <div class="service-box">
+                                        <h3>Marketing support.</h3>
+                                        <p class="text-muted">We can help promote your project to our global community of over 625,000 creative consumers.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>   
                 </div>
             </div>
         </section>
@@ -340,7 +405,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1 text-center">
-                        <h2>Our Work</h2>
+                        <h2>How It Works</h2>
                         <hr class="small">
                         <div class="row">
                             <div class="col-md-6">
@@ -354,11 +419,13 @@
                             <div class="col-md-6">
                                 <div class="portfolio-item">
                                     <div class="service-box">
-                                        <h3>Upload to Shapeways</h3>
+                                        <h3>Upload to Aakist</h3>
                                         <p class="text-muted">Instant pricing. Automated checks. Tools to improve printability.</p>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="row">
                             <div class="col-md-6">
                                 <div class="portfolio-item">
                                     <div class="service-box">
@@ -381,71 +448,12 @@
             </div>
         </section>
 
-        <section class="success" id="about">
+    
+        <section id="about" class="bg-light-gray">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2>What Our Community is Saying</h2>
-                        <hr style="background-color:white;">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="content-section-b">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6 col-sm-6">
-                                    <hr class="section-heading-spacer">
-                                    <div class="clearfix"></div>
-                                    <h2 class="section-heading">BRANDEN C. - 3D ARTIST
-                                    <p class="lead">Price was very affordable. You guys have the best submission system and tools... And it most importantly, it looks fantastic!</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="content-section-b">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                                    <hr class="section-heading-spacer">
-                                    <div class="clearfix"></div>
-                                    <h2 class="section-heading">ALHARITH - SHOPOWNER</h2>
-                                    <p class="lead">Since the moment I saw 3D printing capability, especially through Shapeways, a whole new world opened in front of me.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                                        <div class="content-section-b">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6 col-sm-6">
-                                    <hr class="section-heading-spacer">
-                                    <div class="clearfix"></div>
-                                    <h2 class="section-heading">JILL DAVIS</h2>
-                                    <p class="lead">Love shapeways, you can get inexpensive and very highly detailed 3D prints to realize your ideas.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="content-section-b">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-lg-6 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                                    <hr class="section-heading-spacer">
-                                    <div class="clearfix"></div>
-                                    <h2 class="section-heading">SHAPEWAYS COMMUNITY MEMBER</h2>
-                                    <p class="lead">Shapeways is awesome. The ability to create anything your imagination and capabilities allow is a powerful thing. I'm in love.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="about">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h2 class="section-heading1">Get the Help to Get You Started</h2>
+                        <h2 class="section-heading1">Crowdfunding Success Stories</h2>
                         <br><br><br>
                     </div>
                 </div>
@@ -514,92 +522,6 @@
                                 </div>
                             </li>
                         </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section id="portfolio" class="bg-light-gray">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Designs by the Community</h2>
-                        <h3 class="section-subheading text-muted">Tag your uploads with Animation to show them off on this page.</h3>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                            <img src="../img/about/1.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                            <img src="../img/about/2.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                            <img src="../img/about/3.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                            <img src="../img/about/4.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                            <img src="../img/about/1.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                            <div class="portfolio-hover">
-                            </div>
-                            <img src="../img/about/2.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                            <img src="../img/about/3.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6 portfolio-item">
-                        <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                            <img src="../img/about/4.jpg" class="img-responsive" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>Product Name</h4>
-                            <p class="text-muted">$123.456 by owner_name</p>
-                        </div>
                     </div>
                 </div>
             </div>
