--- a/make/jdesigners.html
+++ b/make/jdesigners.html
@@ -309,9 +309,9 @@
         <header>
             <div class="header-content">
                 <div class="header-content-inner">
-                    <h1>Turn your animations into real-life figurines</h1>
+                    <h1>Jewelry, Reimagined</h1>
                     <hr>
-                    <p>Hold your 3D mesh in your hands with 3D printing</p>
+                    <p>Unleash your creativity with affordable 3D printing</p>
                     <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">Join</a>
                 </div>
             </div>
@@ -321,20 +321,70 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Help All Along the Way</h4>
-                        <p class="text-faded">Global Customer Service Team and in-depth tutorials to answer your questions</p>
+                        <h4 class="section-heading">High Quality, Great Value</h4>
+                        <p class="text-faded">Print in stunning materials like 14k gold for less than you'd expect</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Full Color Prints</h4>
-                        <p class="text-faded">Print single models or entire renders using the best printers available</p>
+                        <h4 class="section-heading">No Need for Inventory</h4>
+                        <p class="text-faded">Make pieces when you need them, or sell directly through Aakist</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Affordable and Fast</h4>
-                        <p class="text-faded">Save on 3D prints and ship them anywhere in the world</p>
+                        <h4 class="section-heading">Endless Possibilities</h4>
+                        <p class="text-faded">Easily craft intricate details and designs you can't make by hand</p>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section id="portfolio" class="portfolio bg-light-gray">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 col-lg-offset-1 text-center">
+                        <h2>Popular Materials</h2>
+                        <hr class="small">
+                        <div class="row">
+                            <div class="col-md-3 col-sm-6 portfolio-item">
+                                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                                    <img src="../img/about/1.jpg" class="img-responsive" alt="">
+                                </a>
+                                <div class="portfolio-caption">
+                                    <h4>Product Name</h4>
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-6 portfolio-item">
+                                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                                    <img src="../img/about/2.jpg" class="img-responsive" alt="">
+                                </a>
+                                <div class="portfolio-caption">
+                                    <h4>Product Name</h4>
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-6 portfolio-item">
+                                <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                                    <img src="../img/about/3.jpg" class="img-responsive" alt="">
+                                </a>
+                                <div class="portfolio-caption">
+                                    <h4>Product Name</h4>
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
+                            </div>
+                            <div class="col-md-3 col-sm-6 portfolio-item">
+                                <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                                    <img src="../img/about/4.jpg" class="img-responsive" alt="">
+                                </a>
+                                <div class="portfolio-caption">
+                                    <h4>Product Name</h4>
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>   
+                </div>
+            </div>
+        </section>
+
 
         <section id="portfolio" class="portfolio">
             <div class="container">
@@ -354,11 +404,13 @@
                             <div class="col-md-6">
                                 <div class="portfolio-item">
                                     <div class="service-box">
-                                        <h3>Upload to Shapeways</h3>
+                                        <h3>Upload to Aakist</h3>
                                         <p class="text-muted">Instant pricing. Automated checks. Tools to improve printability.</p>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="row">
                             <div class="col-md-6">
                                 <div class="portfolio-item">
                                     <div class="service-box">
@@ -409,19 +461,19 @@
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
                                     <h2 class="section-heading">ALHARITH - SHOPOWNER</h2>
-                                    <p class="lead">Since the moment I saw 3D printing capability, especially through Shapeways, a whole new world opened in front of me.</p>
+                                    <p class="lead">Since the moment I saw 3D printing capability, especially through Aakist, a whole new world opened in front of me.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                                        <div class="content-section-b">
+                    <div class="content-section-b">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-sm-6">
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
                                     <h2 class="section-heading">JILL DAVIS</h2>
-                                    <p class="lead">Love shapeways, you can get inexpensive and very highly detailed 3D prints to realize your ideas.</p>
+                                    <p class="lead">Love Aakist, you can get inexpensive and very highly detailed 3D prints to realize your ideas.</p>
                                 </div>
                             </div>
                         </div>
@@ -432,8 +484,8 @@
                                 <div class="col-lg-6 col-lg-offset-1 col-sm-push-6  col-sm-6">
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
-                                    <h2 class="section-heading">SHAPEWAYS COMMUNITY MEMBER</h2>
-                                    <p class="lead">Shapeways is awesome. The ability to create anything your imagination and capabilities allow is a powerful thing. I'm in love.</p>
+                                    <h2 class="section-heading">Aakist COMMUNITY MEMBER</h2>
+                                    <p class="lead">Aakist is awesome. The ability to create anything your imagination and capabilities allow is a powerful thing. I'm in love.</p>
                                 </div>
                             </div>
                         </div>
