--- a/make/animator.html
+++ b/make/animator.html
@@ -340,7 +340,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-10 col-lg-offset-1 text-center">
-                        <h2>Our Work</h2>
+                        <h2>How It Works</h2>
                         <hr class="small">
                         <div class="row">
                             <div class="col-md-6">
@@ -354,11 +354,13 @@
                             <div class="col-md-6">
                                 <div class="portfolio-item">
                                     <div class="service-box">
-                                        <h3>Upload to Shapeways</h3>
+                                        <h3>Upload to Aakist</h3>
                                         <p class="text-muted">Instant pricing. Automated checks. Tools to improve printability.</p>
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="row">
                             <div class="col-md-6">
                                 <div class="portfolio-item">
                                     <div class="service-box">
@@ -409,19 +411,19 @@
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
                                     <h2 class="section-heading">ALHARITH - SHOPOWNER</h2>
-                                    <p class="lead">Since the moment I saw 3D printing capability, especially through Shapeways, a whole new world opened in front of me.</p>
+                                    <p class="lead">Since the moment I saw 3D printing capability, especially through Aakist, a whole new world opened in front of me.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                                        <div class="content-section-b">
+                    <div class="content-section-b">
                         <div class="container">
                             <div class="row">
                                 <div class="col-lg-6 col-sm-6">
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
                                     <h2 class="section-heading">JILL DAVIS</h2>
-                                    <p class="lead">Love shapeways, you can get inexpensive and very highly detailed 3D prints to realize your ideas.</p>
+                                    <p class="lead">Love Aakist, you can get inexpensive and very highly detailed 3D prints to realize your ideas.</p>
                                 </div>
                             </div>
                         </div>
@@ -432,8 +434,8 @@
                                 <div class="col-lg-6 col-lg-offset-1 col-sm-push-6  col-sm-6">
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
-                                    <h2 class="section-heading">SHAPEWAYS COMMUNITY MEMBER</h2>
-                                    <p class="lead">Shapeways is awesome. The ability to create anything your imagination and capabilities allow is a powerful thing. I'm in love.</p>
+                                    <h2 class="section-heading">Aakist COMMUNITY MEMBER</h2>
+                                    <p class="lead">Aakist is awesome. The ability to create anything your imagination and capabilities allow is a powerful thing. I'm in love.</p>
                                 </div>
                             </div>
                         </div>
@@ -445,7 +447,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading1">Get the Help to Get You Started</h2>
+                        <h2 class="section-heading1">Crowdfunding Success Stories</h2>
                         <br><br><br>
                     </div>
                 </div>
