--- a/make/casting.html
+++ b/make/casting.html
@@ -309,9 +309,9 @@
         <header>
             <div class="header-content">
                 <div class="header-content-inner">
-                    <h1>Turn your animations into real-life figurines</h1>
+                    <h1>Wax for Casting, the Ultimate Jeweler's Tool</h1>
                     <hr>
-                    <p>Hold your 3D mesh in your hands with 3D printing</p>
+                    <p>We'll 3D print a wax model for you to cast into any metal</p>
                     <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">Join</a>
                 </div>
             </div>
@@ -321,16 +321,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Help All Along the Way</h4>
-                        <p class="text-faded">Global Customer Service Team and in-depth tutorials to answer your questions</p>
+                        <h4 class="section-heading">High-Quality Models</h4>
+                        <p class="text-faded">3D prints can be used like traditional wax for investment casting</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Full Color Prints</h4>
-                        <p class="text-faded">Print single models or entire renders using the best printers available</p>
+                        <h4 class="section-heading">Incredible Pricing</h4>
+                        <p class="text-faded">Less expensive wax means more profit on each piece</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Affordable and Fast</h4>
-                        <p class="text-faded">Save on 3D prints and ship them anywhere in the world</p>
+                        <h4 class="section-heading">Endless Possibilities</h4>
+                        <p class="text-faded">Easily craft intricate details and designs you can't make by hand</p>
                     </div>
                 </div>
             </div>
@@ -522,7 +522,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 text-center">
-                        <h2 class="section-heading">Designs by the Community</h2>
+                        <h2 class="section-heading">Great Jewelry on Shapeways</h2>
                         <h3 class="section-subheading text-muted">Tag your uploads with Animation to show them off on this page.</h3>
                     </div>
                 </div>
