--- a/make/pdesign.html
+++ b/make/pdesign.html
@@ -309,9 +309,9 @@
         <header>
             <div class="header-content">
                 <div class="header-content-inner">
-                    <h1>Turn your animations into real-life figurines</h1>
+                    <h1>Design Products You Love</h1>
                     <hr>
-                    <p>Hold your 3D mesh in your hands with 3D printing</p>
+                    <p>Shapeways empowers you to develop, make and sell products<br>—your products</p>
                     <a href="#about" class="btn1 btn-primary1 btn-xl1 page-scroll">Join</a>
                 </div>
             </div>
@@ -321,16 +321,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Help All Along the Way</h4>
-                        <p class="text-faded">Global Customer Service Team and in-depth tutorials to answer your questions</p>
+                        <h4 class="section-heading">Way Beyond Plastic</h4>
+                        <p class="text-faded">From wax to stunning metals, you access your own personal factory of 40+ premium materials</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Full Color Prints</h4>
-                        <p class="text-faded">Print single models or entire renders using the best printers available</p>
+                        <h4 class="section-heading">Fast and Affordable</h4>
+                        <p class="text-faded">Instant pricing and quick delivery to your door, whether you order one or one thousand</p>
                     </div>
                     <div class="col-lg-4 text-center">
-                        <h4 class="section-heading">Affordable and Fast</h4>
-                        <p class="text-faded">Save on 3D prints and ship them anywhere in the world</p>
+                        <h4 class="section-heading">Sell, easily, globally</h4>
+                        <p class="text-faded">Sell your products, without ever touching production, managing inventory or billing</p>
                     </div>
                 </div>
             </div>
@@ -354,7 +354,7 @@
                             <div class="col-md-6">
                                 <div class="portfolio-item">
                                     <div class="service-box">
-                                        <h3>Upload to Shapeways</h3>
+                                        <h3>Upload to Aakist</h3>
                                         <p class="text-muted">Instant pricing. Automated checks. Tools to improve printability.</p>
                                     </div>
                                 </div>
@@ -409,7 +409,7 @@
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
                                     <h2 class="section-heading">ALHARITH - SHOPOWNER</h2>
-                                    <p class="lead">Since the moment I saw 3D printing capability, especially through Shapeways, a whole new world opened in front of me.</p>
+                                    <p class="lead">Since the moment I saw 3D printing capability, especially through Aakist, a whole new world opened in front of me.</p>
                                 </div>
                             </div>
                         </div>
@@ -421,7 +421,7 @@
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
                                     <h2 class="section-heading">JILL DAVIS</h2>
-                                    <p class="lead">Love shapeways, you can get inexpensive and very highly detailed 3D prints to realize your ideas.</p>
+                                    <p class="lead">Love Aakist, you can get inexpensive and very highly detailed 3D prints to realize your ideas.</p>
                                 </div>
                             </div>
                         </div>
@@ -432,8 +432,8 @@
                                 <div class="col-lg-6 col-lg-offset-1 col-sm-push-6  col-sm-6">
                                     <hr class="section-heading-spacer">
                                     <div class="clearfix"></div>
-                                    <h2 class="section-heading">SHAPEWAYS COMMUNITY MEMBER</h2>
-                                    <p class="lead">Shapeways is awesome. The ability to create anything your imagination and capabilities allow is a powerful thing. I'm in love.</p>
+                                    <h2 class="section-heading">Aakist COMMUNITY MEMBER</h2>
+                                    <p class="lead">Aakist is awesome. The ability to create anything your imagination and capabilities allow is a powerful thing. I'm in love.</p>
                                 </div>
                             </div>
                         </div>
