--- a/make/jdesigners.html
+++ b/make/jdesigners.html
@@ -433,6 +433,23 @@
             </div>
         </section>
 
+        <section id="portfolio" class="portfolio bg-light-gray">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-10 col-lg-offset-1 text-center">
+                        <h2>3D Printing Cast Metals</h2>
+                        <hr class="small">
+                        <div class="row">
+                                <div class="text-center">
+                                    <iframe width="750" height="315" src="https://www.youtube.com/embed/IN-wnuCZdqU" frameborder="0"></iframe>
+                                </div>
+                        </div>
+                    </div>   
+                </div>
+            </div>
+        </section>
+
+
         <section class="success" id="about">
             <div class="container">
                 <div class="row">
