--- a/shop.html
+++ b/shop.html
@@ -312,8 +312,8 @@
                 <div class="container-fluid">
                     <div class="row no-gutter popup-gallery">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            <div class="hover ehover5">
-                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Wedding</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
@@ -321,8 +321,8 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            <div class="hover ehover5">
-                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Customizable</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
@@ -337,8 +337,8 @@
                 <div class="container-fluid">
                     <div class="row no-gutter popup-gallery">
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                            <div class="hover ehover5">
-                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Jewellery</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
@@ -346,8 +346,8 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                            <div class="hover ehover5">
-                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Accessories</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
@@ -356,8 +356,8 @@
                         </div>
 
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                            <div class="hover ehover5">
-                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/slide-1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Games</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
@@ -372,8 +372,8 @@
                 <div class="container-fluid">
                     <div class="row no-gutter popup-gallery">
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            <div class="hover ehover5">
-                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Art</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
@@ -381,8 +381,8 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                            <div class="hover ehover5">
-                                <img class="img-responsive" src="Img/portfolio/thumbnails/1.jpg" alt="">
+                            <div class="hover ehover1">
+                                <img class="img-responsive" src="Img/download1.jpg" alt="">
                                 <div class="overlay">
                                     <h2>Miniatures</h2>
                                     <button class="info" data-toggle="modal" data-target="#modal1">Shop Now</button>
